fixed z-index in contacts of title text and line

--- a/css/4_contacts/contacts.css
+++ b/css/4_contacts/contacts.css
@@ -409,6 +409,7 @@ body {
     height: 59px;
     border: 3px solid #29ABE2;
     border-radius: 15px;
+    z-index: -1;
 }
 
 .contact-title-text {
@@ -420,6 +421,7 @@ body {
     line-height: 120%;
     color: #2A3647;
     flex: none;
+    z-index: -1;
 }
 
 .contact-canvas {
